Bug 121396 - CTTE: RenderFrameSet is never anonymous.
Summary: CTTE: RenderFrameSet is never anonymous.
Status: RESOLVED FIXED
Alias: None
Product: WebKit
Classification: Unclassified
Component: Frames (show other bugs)
Version: 528+ (Nightly build)
Hardware: Unspecified Unspecified
: P2 Normal
Assignee: Andreas Kling
URL:
Keywords:
Depends on:
Blocks:
 
Reported: 2013-09-15 11:32 PDT by Andreas Kling
Modified: 2013-09-15 11:59 PDT (History)
5 users (show)

See Also:


Attachments
Patch (2.98 KB, patch)
2013-09-15 11:46 PDT, Andreas Kling
no flags Details | Formatted Diff | Diff
Patch (9.93 KB, patch)
2013-09-15 11:49 PDT, Andreas Kling
koivisto: review+
Details | Formatted Diff | Diff

Note You need to log in before you can comment on or make changes to this bug.
Description Andreas Kling 2013-09-15 11:32:30 PDT
CTTE: RenderFrameSet is never anonymous.
Comment 1 Andreas Kling 2013-09-15 11:46:28 PDT
Created attachment 211720 [details]
Patch
Comment 2 Andreas Kling 2013-09-15 11:49:12 PDT
Created attachment 211721 [details]
Patch
Comment 3 Andreas Kling 2013-09-15 11:59:59 PDT
Committed r155821: <http://trac.webkit.org/changeset/155821>