CTTE: RenderFrameSet is never anonymous. <https://webkit.org/b/121396>

Reviewed by Antti Koivisto.

This renderer is never anonymous, and always has a corresponding HTMLFrameSetElement.
Replaced element() with a frameSetElement().

Canonical link: https://commits.webkit.org/139377@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@155821 268f45cc-cd09-0410-ab3c-d52691b4dbfc