Source/WebCore/html/HTMLFrameSetElement.cpp
@@ -156,12 +156,12 @@ bool HTMLFrameSetElement::rendererIsNeeded(const RenderStyle& style)
     return style.isStyleAvailable();
 }
 
-RenderObject *HTMLFrameSetElement::createRenderer(RenderArena *arena, RenderStyle *style)
+RenderObject* HTMLFrameSetElement::createRenderer(RenderArena* arena, RenderStyle* style)
 {
     if (style->hasContent())
         return RenderObject::createObject(this, style);
     
-    return new (arena) RenderFrameSet(this);
+    return new (arena) RenderFrameSet(*this);
 }
 
 HTMLFrameSetElement* HTMLFrameSetElement::findContaining(Element* descendant)
