Source/WebCore/rendering/RenderFrameSet.cpp
@@ -44,8 +44,8 @@
 
 namespace WebCore {
 
-RenderFrameSet::RenderFrameSet(HTMLFrameSetElement* frameSet)
-    : RenderBox(frameSet)
+RenderFrameSet::RenderFrameSet(HTMLFrameSetElement& frameSet)
+    : RenderBox(&frameSet)
     , m_isResizing(false)
     , m_isChildResizing(false)
 {
@@ -56,14 +56,14 @@ RenderFrameSet::~RenderFrameSet()
 {
 }
 
+HTMLFrameSetElement& RenderFrameSet::frameSetElement() const
+{
+    return toHTMLFrameSetElement(*RenderBox::element());
+}
+
 RenderFrameSet::GridAxis::GridAxis()
     : m_splitBeingResized(noSplit)
 {
-}
-
-inline HTMLFrameSetElement* RenderFrameSet::frameSet() const
-{
-    return toHTMLFrameSetElement(element());
 }
 
 static Color borderStartEdgeColor()
@@ -91,7 +91,7 @@ void RenderFrameSet::paintColumnBorder(const PaintInfo& paintInfo, const IntRect
     // Fill first.
     GraphicsContext* context = paintInfo.context;
     ColorSpace colorSpace = style()->colorSpace();
-    context->fillRect(borderRect, frameSet()->hasBorderColor() ? style()->visitedDependentColor(CSSPropertyBorderLeftColor) : borderFillColor(), colorSpace);
+    context->fillRect(borderRect, frameSetElement().hasBorderColor() ? style()->visitedDependentColor(CSSPropertyBorderLeftColor) : borderFillColor(), colorSpace);
     
     // Now stroke the edges but only if we have enough room to paint both edges with a little
     // bit of the fill color showing through.
@@ -111,7 +111,7 @@ void RenderFrameSet::paintRowBorder(const PaintInfo& paintInfo, const IntRect& b
     // Fill first.
     GraphicsContext* context = paintInfo.context;
     ColorSpace colorSpace = style()->colorSpace();
-    context->fillRect(borderRect, frameSet()->hasBorderColor() ? style()->visitedDependentColor(CSSPropertyBorderLeftColor) : borderFillColor(), colorSpace);
+    context->fillRect(borderRect, frameSetElement().hasBorderColor() ? style()->visitedDependentColor(CSSPropertyBorderLeftColor) : borderFillColor(), colorSpace);
 
     // Now stroke the edges but only if we have enough room to paint both edges with a little
     // bit of the fill color showing through.
@@ -134,7 +134,7 @@ void RenderFrameSet::paint(PaintInfo& paintInfo, const LayoutPoint& paintOffset)
 
     size_t rows = m_rows.m_sizes.size();
     size_t cols = m_cols.m_sizes.size();
-    LayoutUnit borderThickness = frameSet()->border();
+    LayoutUnit borderThickness = frameSetElement().border();
     
     LayoutUnit yPos = 0;
     for (size_t r = 0; r < rows; r++) {
@@ -394,9 +394,9 @@ void RenderFrameSet::fillFromEdgeInfo(const FrameEdgeInfo& edgeInfo, int r, int 
 
 void RenderFrameSet::computeEdgeInfo()
 {
-    m_rows.m_preventResize.fill(frameSet()->noResize());    
+    m_rows.m_preventResize.fill(frameSetElement().noResize());
     m_rows.m_allowBorder.fill(false);
-    m_cols.m_preventResize.fill(frameSet()->noResize());    
+    m_cols.m_preventResize.fill(frameSetElement().noResize());
     m_cols.m_allowBorder.fill(false);
     
     RenderObject* child = firstChild();
@@ -422,10 +422,10 @@ void RenderFrameSet::computeEdgeInfo()
 
 FrameEdgeInfo RenderFrameSet::edgeInfo() const
 {
-    FrameEdgeInfo result(frameSet()->noResize(), true);
+    FrameEdgeInfo result(frameSetElement().noResize(), true);
     
-    int rows = frameSet()->totalRows();
-    int cols = frameSet()->totalCols();
+    int rows = frameSetElement().totalRows();
+    int cols = frameSetElement().totalCols();
     if (rows && cols) {
         result.setPreventResize(LeftFrameEdge, m_cols.m_preventResize[0]);
         result.setAllowBorder(LeftFrameEdge, m_cols.m_allowBorder[0]);
@@ -458,17 +458,17 @@ void RenderFrameSet::layout()
         setHeight(view().viewHeight());
     }
 
-    unsigned cols = frameSet()->totalCols();
-    unsigned rows = frameSet()->totalRows();
+    unsigned cols = frameSetElement().totalCols();
+    unsigned rows = frameSetElement().totalRows();
 
     if (m_rows.m_sizes.size() != rows || m_cols.m_sizes.size() != cols) {
         m_rows.resize(rows);
         m_cols.resize(cols);
     }
 
-    LayoutUnit borderThickness = frameSet()->border();
-    layOutAxis(m_rows, frameSet()->rowLengths(), height() - (rows - 1) * borderThickness);
-    layOutAxis(m_cols, frameSet()->colLengths(), width() - (cols - 1) * borderThickness);
+    LayoutUnit borderThickness = frameSetElement().border();
+    layOutAxis(m_rows, frameSetElement().rowLengths(), height() - (rows - 1) * borderThickness);
+    layOutAxis(m_cols, frameSetElement().colLengths(), width() - (cols - 1) * borderThickness);
 
     if (flattenFrameSet())
         positionFramesWithFlattening();
@@ -497,11 +497,11 @@ void RenderFrameSet::positionFrames()
     if (!child)
         return;
 
-    int rows = frameSet()->totalRows();
-    int cols = frameSet()->totalCols();
+    int rows = frameSetElement().totalRows();
+    int cols = frameSetElement().totalCols();
 
     int yPos = 0;
-    int borderThickness = frameSet()->border();
+    int borderThickness = frameSetElement().border();
     for (int r = 0; r < rows; r++) {
         int xPos = 0;
         int height = m_rows.m_sizes[r];
@@ -540,10 +540,10 @@ void RenderFrameSet::positionFramesWithFlattening()
     if (!child)
         return;
 
-    int rows = frameSet()->totalRows();
-    int cols = frameSet()->totalCols();
+    int rows = frameSetElement().totalRows();
+    int cols = frameSetElement().totalCols();
 
-    int borderThickness = frameSet()->border();
+    int borderThickness = frameSetElement().border();
     bool repaintNeeded = false;
 
     // calculate frameset height based on actual content height to eliminate scrolling
@@ -557,8 +557,8 @@ void RenderFrameSet::positionFramesWithFlattening()
 
             int width = m_cols.m_sizes[c];
 
-            bool fixedWidth = frameSet()->colLengths() && frameSet()->colLengths()[c].isFixed();
-            bool fixedHeight = frameSet()->rowLengths() && frameSet()->rowLengths()[r].isFixed();
+            bool fixedWidth = frameSetElement().colLengths() && frameSetElement().colLengths()[c].isFixed();
+            bool fixedHeight = frameSetElement().rowLengths() && frameSetElement().rowLengths()[r].isFixed();
 
             // has to be resized and itself resize its contents
             if (!fixedWidth)
@@ -712,7 +712,7 @@ void RenderFrameSet::setIsResizing(bool isResizing)
         if (ancestor->isFrameSet())
             toRenderFrameSet(ancestor)->m_isChildResizing = isResizing;
     }
-    frame().eventHandler().setResizingFrameSet(isResizing ? frameSet() : 0);
+    frame().eventHandler().setResizingFrameSet(isResizing ? &frameSetElement() : 0);
 }
 
 bool RenderFrameSet::isResizingRow() const
@@ -742,7 +742,7 @@ int RenderFrameSet::splitPosition(const GridAxis& axis, int split) const
     if (needsLayout())
         return 0;
 
-    int borderThickness = frameSet()->border();
+    int borderThickness = frameSetElement().border();
 
     int size = axis.m_sizes.size();
     if (!size)
@@ -759,7 +759,7 @@ int RenderFrameSet::hitTestSplit(const GridAxis& axis, int position) const
     if (needsLayout())
         return noSplit;
 
-    int borderThickness = frameSet()->border();
+    int borderThickness = frameSetElement().border();
     if (borderThickness <= 0)
         return noSplit;
 
